fix drill function

--- a/drill/Dockerfile
+++ b/drill/Dockerfile
@@ -1,28 +1,21 @@
 FROM ghcr.io/openfaas/classic-watchdog:0.1.5 as watchdog
 
-FROM alpine:3.12
+FROM alpine:3.12 as drill
 
-RUN mkdir -p /home/app && \
-    apk --update add --no-cache drill
+RUN adduser inkscape -S -D drill
+RUN apk --update add --no-cache drill
 
-COPY --from=watchdog /fwatchdog /usr/bin/fwatchdog
-RUN chmod +x /usr/bin/fwatchdog
-
-# Add non root user
-RUN addgroup -S app && adduser app -S -G app
-RUN chown app /home/app
-
-WORKDIR /home/app
-
-USER app
+FROM scratch as release
 
 # Populate example here - i.e. "cat", "sha512sum" or "node index.js"
-ENV fprocess="xargs -n 4 drill"
+ENV fprocess="xargs drill"
 # Set to true to see request in function logs
 ENV write_debug="false"
 
-EXPOSE 8080
+COPY --from=drill / /
+COPY --from=watchdog /fwatchdog /usr/bin/fwatchdog
 
+USER drill
+WORKDIR /home/drill
 HEALTHCHECK --interval=3s CMD [ -e /tmp/.lock ] || exit 1
-
 CMD ["fwatchdog"]
