--- a/.github/workflows/build-drill.yaml
+++ b/.github/workflows/build-drill.yaml
@@ -21,13 +21,6 @@ jobs:
           registry: reg.growlab.digital
           username: ${{ secrets.GROWLAB_USERNAME }}
           password: ${{ secrets.GROWLAB_TOKEN }}
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
@@ -35,11 +28,6 @@ jobs:
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
           tags: |
-            reg.growlab.digital/drill-inkscape:latest
-      - # Temp fix
-        # https://github.com/docker/build-push-action/issues/252
-        # https://github.com/moby/buildkit/issues/1896
-        name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+            reg.growlab.digital/faas-drill:latest
+          cache-from: type=registry,ref=reg.growlab.digital/faas-drill:latest
+          cache-to: type=inline
